# thirdeye

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  feature.md  pyproject.toml  walkthrough.md
.github/workflows/: ci.yml
docs/: architecture.md  integration-guide.md
examples/: feature.json
examples/sample_project/: thirdeye.json  workload.py
tests/: test_core.py  test_insights.py  test_integration.py  test_intelligence.py
thirdeye/: __init__.py  api.py  cli.py  controller.py  discovery.py  evidence.py  hashing.py  integration.py  lineage.py  manifest.py  models.py  plugins.py  reports.py  runner.py  runtime.py  sdk.py  store.py
thirdeye/adapters/: __init__.py  base.py  command.py  pytorch.py
thirdeye/intelligence/: __init__.py  calibration.py  diagnostics.py  monitor.py  pytorch.py  signals.py
