[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirdeye-evidence"
version = "0.3.0"
description = "Universal evidence and experiment platform for measuring what works, why, and at what cost."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ThirdEye contributors" }]
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
thirdeye = "thirdeye.cli:main"
evidence = "thirdeye.cli:main"

[project.entry-points."thirdeye.adapters"]
# Third-party packages can register adapter factories in this group.

[tool.setuptools.packages.find]
include = ["thirdeye*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
